--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,21 @@
-* {
-    border: 0;
-    padding: 0; 
-    box-sizing: border-box; 
+/* * {
+  border: 0;
+  padding: 0;
+  box-sizing: border-box;
+} */
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .board {
-    height: 500px;
-    width: 500px;
-    display: grid;
+  height: 500px;
+  width: 500px;
+  display: grid;
+  margin: 50px;
+  box-shadow: 5px 3px 11px 5px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 5px 3px 11px 5px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 5px 3px 11px 5px rgba(0, 0, 0, 0.3);
 }
