updated index.htm and styles.css

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,23 @@
   box-sizing: border-box;
 } */
 
+body, html {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+}
+
+body {
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    77deg,
+    rgba(2, 0, 36, 1) 11%,
+    rgba(218, 66, 189, 0.8827906162464986) 40%,
+    rgba(208, 73, 192, 1) 65%,
+    rgba(0, 212, 255, 1) 90%
+  );
+}
+
 .container {
   display: flex;
   flex-direction: column;
@@ -15,7 +32,25 @@
   width: 500px;
   display: grid;
   margin: 50px;
+  background-color: white;
   box-shadow: 5px 3px 11px 5px rgba(0, 0, 0, 0.3);
   -webkit-box-shadow: 5px 3px 11px 5px rgba(0, 0, 0, 0.3);
   -moz-box-shadow: 5px 3px 11px 5px rgba(0, 0, 0, 0.3);
+}
+
+.buttons {
+  margin-bottom: 20px;
+}
+
+.buttons button {
+  margin: 10px;
+  min-width: 100px;
+  min-height: 30px;
+}
+
+.mybtn-black {
+  background-color: white;
+  color: black;
+  border: black solid 0.5px;
+  border-radius: 5px;
 }
