--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,8 @@
   box-sizing: border-box;
 } */
 
-body, html {
+body,
+html {
   height: 100%;
   width: 100%;
   margin: 0;
@@ -52,5 +53,53 @@ body {
   background-color: white;
   color: black;
   border: black solid 0.5px;
+  border-radius: 5px;
+}
+
+.mybtn-black:hover {
+  background-color: black;
+  color: white;
+  border: white solid 0.5px;
+  border-radius: 5px;
+  transition: 0.7s;
+}
+
+.mybtn-white {
+  background-color: black;
+  color: white;
+  border: white solid 0.5px;
+  border-radius: 5px;
+}
+
+.mybtn-white:hover {
+  background-color: white;
+  color: black;
+  border-radius: 5px;
+  border: black solid 0.5px;
+  transform: 0.9s;
+}
+
+.mybtn-random {
+  background-color: blueviolet;
+  color: white;
+  border: none;
+  border-radius: 5px;
+}
+
+.mybtn-random:hover {
+  background: rgb(131, 58, 180);
+  background: linear-gradient(
+    77deg,
+    rgba(131, 58, 180, 1) 0%,
+    rgba(253, 29, 29, 1) 50%,
+    rgba(252, 176, 69, 1) 100%
+  );
+  transition: 1.1s;
+}
+
+.mybtn-reset {
+  background-color: red;
+  color: white;
+  border: none;
   border-radius: 5px;
 }
