--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ html {
   height: 100%;
   width: 100%;
   margin: 0;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 body {
@@ -26,6 +27,12 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+h1 {
+  color: antiquewhite;
+  margin: 30px 0 0 0;
+  padding: 0;
 }
 
 .board {
