--- a/styles.css
+++ b/styles.css
@@ -110,3 +110,29 @@ h1 {
   border: none;
   border-radius: 5px;
 }
+
+input {
+  width: 100px;
+  height: 30px;
+  border: black solid 0.5px;
+  border-radius: 13px;
+  background-color: chocolate;
+  color: white;
+}
+
+::placeholder {
+  color: white;
+  font-family: 'Ubuntu', sans-serif;
+  text-align: center;
+}
+
+.input-field button {
+  margin-left: 10px;
+  min-width: 100px;
+  min-height: 30px;
+  font-family: 'Ubuntu', sans-serif;
+  background-color: blue;
+  color: white;
+  border-radius: 5px;
+  border: none;
+}
